Fixed grid for hero on smaller screens

--- a/src/scss/_bs-grid.scss
+++ b/src/scss/_bs-grid.scss
@@ -44,6 +44,9 @@
   .page-width {
     max-width: calc(92vw + 1px);
   }
+  .grid-row {
+    height: 23vw;
+  }
   .wrapper,
   .top-whitespace {
     background-size: 23vw 23vw;
